[gd_scene load_steps=2 format=3 uid="uid://0737woac8q3q"]

[ext_resource type="Script" path="res://hand.gd" id="1_5lhvt"]

[node name="hand" type="Node3D"]
script = ExtResource("1_5lhvt")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.859977, 0.510333, 0, -0.510333, 0.859977, 18, 11, 1)
fov = 110.0

[node name="tile1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="tile2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -3)

[node name="tile3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -3)

[node name="tile4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -3)

[node name="tile5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -3)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.813314, 0.581825, 0, -0.581825, -0.813314, 0, 56.2712, 0)
